# Shellular-Automata

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
dependencies/: CMakeLists.txt
dependencies/GLEW/: CMakeLists.txt
dependencies/GLFW/: CMakeLists.txt
dependencies/glm/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/yaml/: CMakeLists.txt
res/: ECA.fs  MNCA.fs  MNCA_NN.fs  MNCA_asymptotic.fs  basic.fs  basic.vs  conservative.fs  conservative_NN.fs  conservative_force.fs  conservative_layer.fs  conservative_layer_1rad.fs  conservative_layer_push.fs  conservative_layer_radius.fs  conservative_layer_rps.fs  conservative_predator.fs  conservative_rulefactor.fs  conservative_rulefactorS.fs  conservative_tann.fs  fft_x.glsl  fft_y.glsl  fluid_sim copy.cs  fluid_sim.fs  histogram.cs  init.cs  paintMNCA.fs  paint_vel.cs  reaction_diffusion.fs  slack_automata copy 2.fs  slack_automata.fs  slack_layer.fs  slackerz.fs  viewer.fs
res/fluidMNCA/: fMNCA_Copy.cs  fMNCA_Div.cs  fMNCA_in_solve.cs  fluidMNCA.fs  init_mnca.fs
res/fluid_sim/: advect.cs  advect_vel.cs  clear.cs  copy.cs  diffusion.cs  div.cs  fluid_viewer.fs  project.cs
res/mnca_temp/: diffusion.cs
setups/: fluid.yaml  fluidMNCA.yaml  mnca.yaml  mnca_diffusion.yaml  slackerman.yaml
src/: data.cpp  data.hpp  engine.cpp  engine.hpp  print.cpp  print.hpp  simulation_setup.cpp  simulation_setup.hpp  simulation_setup_loader.cpp  simulation_setup_loader.hpp  start_up.cpp  viewer.cpp  viewer.hpp  window.cpp  window.hpp
src/controllers/: engine_control.cpp  engine_control.hpp  gui_control.hpp  init_texture_control.cpp  init_texture_control.hpp  mutation_control.cpp  mutation_control.hpp  paint_control.cpp  paint_control.hpp  recorder_control.cpp  recorder_control.hpp  shader_control.cpp  shader_control.hpp  statistics_control.cpp  statistics_control.hpp  viewer_control.cpp  viewer_control.hpp  window_control.cpp  window_control.hpp
src/engines/: compute_shader_engine.cpp  compute_shader_engine.hpp  engine.hpp  fragment_shader_engine.cpp  fragment_shader_engine.hpp
src/render/: framebuffer.cpp  framebuffer.hpp  glsl_transpiler.cpp  glsl_transpiler.hpp  model.hpp  renderSurface.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture_save.hpp
